--- a/assets/package.json
+++ b/assets/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "flowbite": "^1.7.0"
+    "flowbite": "^1.7.0",
+    "apexcharts": "^3.43.0"
   }
 }
